--- a/dark-mode.css
+++ b/dark-mode.css
@@ -80,3 +80,12 @@
 .dark-mode #typewriter-text {
     color: rgb(195, 193, 193);
 }
+.dark-mode .login-button a:hover {
+    background-color: rgb(28,48,65);
+    color: #fcc62e;
+}
+
+.dark-mode .login-button a {
+    background-color: #343a40;
+    color: rgb(195, 193, 193);
+}
