--- a/wave-animation.css
+++ b/wave-animation.css
@@ -2,7 +2,7 @@ body {
     margin: auto;
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
     overflow: auto;
-    background: linear-gradient(315deg, rgba(255, 255, 204, 1) 3%, rgba(255, 218, 102, 1) 38%, rgba(255, 255, 153, 1) 68%, rgba(255, 204, 51, 1) 98%);
+    background: linear-gradient(315deg, rgb(240, 240, 202) 3%, rgb(236, 200, 95) 38%, rgb(240, 240, 53) 68%, rgb(241, 181, 3) 98%);
     animation: gradient 15s ease infinite;
     background-size: 400% 400%;
     background-attachment: fixed;
