--- a/loginpg.css
+++ b/loginpg.css
@@ -12,7 +12,44 @@ body{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background: #111;
+	margin: auto;
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    overflow: auto;
+    background: linear-gradient(315deg, rgba(255, 255, 204, 1) 3%, rgba(255, 218, 102, 1) 38%, rgba(255, 255, 153, 1) 68%, rgba(255, 204, 51, 1) 98%);
+    animation: gradient 15s ease infinite;
+    background-size: 400% 400%;
+    background-attachment: fixed;
+}
+#navbar1 {
+	width: 100%;
+	background-color: #fcc62e;
+	color: #133042;
+	padding: 15px 30px;
+	font-size: 24px;
+	font-weight: bold;
+	text-align: left;
+	box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+	justify-content: flex-start;
+	align-items: center;
+	display: flex;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 10;
+}
+.a1 {
+	text-decoration: none;
+	color: #133042;
+	display: inline-flex;
+	align-items: center;
+	margin: 0 10px;
+}
+
+.a1:hover {
+	background-color: #133042;
+	color: #fcc62e;
+	padding: 4px 8px;
+	border-radius: 4px;
 }
 
 .form{
@@ -86,8 +123,8 @@ body{
 	border: none;
 	width: 320px;
 	height: 55px;
-	background: #4285F4;
-	color: #fff;
+	background: #fcc62e;
+	color: #133042;
 	font-size: 18px;
 	letter-spacing: 1px;
 	border-radius: 5px;
@@ -97,9 +134,9 @@ body{
 }
 
 .form .btn:hover{
-	border-left: solid 8px rgba(255, 255, 255, 0.5);
-	border-right: solid 8px rgba(255, 255, 255, 0.5);
-	box-shadow: 0 0 100px rgba(66, 133, 244, 0.8);
+	border-left: solid 8px rgba(252, 198, 46, 0.5);
+	border-right: solid 8px rgba(252, 198, 46, 0.5);
+	box-shadow: 0 0 100px rgba(252, 198, 46, 0.8);
 }
 
 .form .options-02{
