--- a/loginpg.css
+++ b/loginpg.css
@@ -1,26 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-* {
+*{
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 	text-decoration: none;
 }
 
-body {
+body{
 	height: 100vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin: auto;
-	font-family: 'Poppins', sans-serif;
-	overflow: auto;
-	background: linear-gradient(315deg, rgba(255, 255, 204, 1) 3%, rgba(255, 218, 102, 1) 38%, rgba(255, 255, 153, 1) 68%, rgba(255, 204, 51, 1) 98%);
-	animation: gradient 15s ease infinite;
-	background-size: 400% 400%;
-	background-attachment: fixed;
-}
 
+	margin: auto;
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    overflow: auto;
+    background: linear-gradient(315deg, rgba(255, 255, 204, 1) 3%, rgba(255, 218, 102, 1) 38%, rgba(255, 255, 153, 1) 68%, rgba(255, 204, 51, 1) 98%);
+    animation: gradient 15s ease infinite;
+    background-size: 400% 400%;
+    background-attachment: fixed;
+}
 #navbar1 {
 	width: 100%;
 	background-color: #fcc62e;
@@ -38,12 +38,6 @@ body {
 	left: 0;
 	z-index: 10;
 }
-
-#navbar1 i {
-	margin-right: 10px;
-	font-size: 28px;
-}
-
 .a1 {
 	text-decoration: none;
 	color: #133042;
@@ -53,43 +47,40 @@ body {
 }
 
 .a1:hover {
-	background-color: #050505;
+	background-color: #133042;
 	color: #fcc62e;
 	padding: 4px 8px;
 	border-radius: 4px;
+	background: #050505;
 }
 
-.form {
+.form{
 	z-index: 1;
-	font-family: 'Poppins', sans-serif;
+	font-family: "Poppins", sans-serif;
 	position: absolute;
 	width: 320px;
 	text-align: center;
 }
 
-.form i {
+.form i{
 	z-index: 1;
 	color: #ccc;
 	font-size: 65px;
 	margin-bottom: 30px;
 }
 
-.form .signup-form {
+.form .signup-form{
 	display: none;
 }
 
-#icn, #icn2 {
-	color: #2e3b4e;
-}
-
-.form .user-input {
+.form .user-input{
 	width: 320px;
 	height: 55px;
 	margin-bottom: 30px;
 	outline: none;
 	border: none;
-	background: #2e3b4e;
-	color: rgba(245,198,81,1);
+	background: rgba(255, 255, 255, 0.2);
+	color: #fff;
 	font-size: 18px;
 	text-align: center;
 	border-radius: 5px;
@@ -97,62 +88,52 @@ body {
 	transition-property: border-left, border-right, box-shadow;
 }
 
-.form .user-input::placeholder {
-	color: #cfd8dc;
-	opacity: 0.9;
+.form .user-input:hover, .form .user-input:focus, .form .user-input:active{
+
+	border-left: solid 8px #0e5b99;
+	border-right: solid 8px #0e5b99;
+	box-shadow: 0 0 100px rgba(40, 213, 248, 0.8);
+	border-left: solid 8px #d45805;
+	border-right: solid 8px #d45805;
+	box-shadow: 0 0 100px rgba(209, 251, 2, 0.8);
+
 }
 
-.form .user-input:hover,
-.form .user-input:focus,
-.form .user-input:active {
-	border-left: solid 8px rgb(244, 192, 61);
-	border-right: solid 8px rgb(241, 189, 59);
-	box-shadow: 0 0 100px rgba(245,198,81,0.5);
-	background: #36485a;
-	color: #fff;
-}
-
-.form .options-01 {
+.form .options-01{
 	margin-bottom: 50px;
-	display: flex;
-	justify-content: space-between;
-	padding: 0 5px;
 }
 
-.form .options-01 input[type="checkbox"] {
+.form .options-01 input{
 	width: 15px;
 	height: 15px;
 	margin-right: 5px;
-	cursor: pointer;
 }
 
-.form .options-01 .remember-me {
-	color: #7b7b7b;
+.form .options-01 .remember-me{
+	color: #bbb;
 	font-size: 14px;
 	display: flex;
 	align-items: center;
+	float: left;
 	cursor: pointer;
 }
 
-.form .options-01 a {
-	color: #7b7b7b;
+.form .options-01 a{
+	color: #888;
 	font-size: 14px;
 	font-style: italic;
-	text-decoration: underline;
+	float: right;
 }
 
-#home-icon {
-	display: flex;
-	align-items: center;
-}
-
-.form .btn {
+.form .btn{
 	outline: none;
 	border: none;
 	width: 320px;
 	height: 55px;
+	background: #fcc62e;
+	color: #133042;
 	background: #a88711;
-	color: #7b7b7b;
+	color: #fff;
 	font-size: 18px;
 	letter-spacing: 1px;
 	border-radius: 5px;
@@ -161,49 +142,38 @@ body {
 	transition-property: border-left, border-right, box-shadow;
 }
 
-.form .btn:hover {
+.form .btn:hover{
+	border-left: solid 8px rgba(252, 198, 46, 0.5);
+	border-right: solid 8px rgba(252, 198, 46, 0.5);
+	box-shadow: 0 0 100px rgba(252, 198, 46, 0.8);
 	border-left: solid 8px rgba(255, 255, 255, 0.5);
 	border-right: solid 8px rgba(255, 255, 255, 0.5);
 	box-shadow: 0 0 100px rgba(238, 255, 2, 0.8);
-	background-color: #c9a112;
 }
 
-.form .options-02 {
-	color: #7b7b7b;
+.form .options-02{
+	color: #bbb;
 	font-size: 14px;
 	margin-top: 30px;
 }
 
-.form .options-02 a {
+.form .options-02 a{
+	color: #4285F4;
 	color: #abb727;
-	font-weight: 500;
-	text-decoration: underline;
-}
-
-#mode-toggle {
-	position: absolute;
-	top: 100px;
-	right: 20px;
-	background-color: transparent;
-	border: none;
-	font-size: 35px;
-	color: #ffbb00;
-	cursor: pointer;
-	transition: transform 0.3s ease;
-}
-
-#mode-toggle:hover {
-	transform: scale(1.1);
 }
 
 /* Responsive CSS */
-@media screen and (max-width: 500px) {
-	.form {
+
+@media screen and (max-width: 500px){
+	.form{
 		width: 95%;
 	}
 
-	.form .user-input,
-	.form .btn {
+	.form .user-input{
+		width: 100%
+	}
+
+	.form .btn{
 		width: 100%;
 	}
 }
